# md-cp.rs

./: .gitignore  Cargo.toml  flake.nix
examples/: document1.md  document2.md  template.md
nix/: pkg.nix
src/: cli.rs  main.rs  utils.rs
