[package]
name = "md-cp"
version = "0.0.0"  # Ignored, use version from flake.nix
author = "Maxime Laudrin"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "color"] }
directories-next = "2.0.0"
glob = "0.3.3"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
